--- a/index.html
+++ b/index.html
@@ -1,115 +1,214 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>HELLO JAVASCRIPT FOP REALS</title>
-  <script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sameple JavaScript Engine</title>
   <style type="text/css">
     body {
-      background-color: rgb(58, 58, 58);
-      color: white;
+      background-color: rgb(80, 80, 80);
       padding: 0px;
       margin: 0px;
     }
 
-    #box1 {
-      width: 200px;
-      min-height: 200px;
+    canvas {
+      display: block;
+      margin: auto;
       border: 1px solid white;
-      margin-top: 10px;
-      margin-left: 10px;
-      font-size: 10px;
+      margin-top: 100px;
     }
   </style>
+  <script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>
   <script type="text/javascript">
+    //display
+    const DISPLAY_WIDTH = 1024;
+    const DISPLAY_HEIGHT = 768;
     var gameCanvas;
     var gameContext;
-    var gameDeltaT = 0;
-    var elapasedT = 0;
-    var lastGameUpdate = moment().valueOf();
-    var ashImg;
+    //fps counter variables
+    const FPS = 60;
     var currentFPS = 0;
     var lastFPS = 0;
     var lastFPSDate = moment().valueOf();
-    var startDate;
-    const GAME_WIDTH = 1024;
-    const GAME_HEIGHT = 768;
-    const GRAVITY = -0.1;
-    const TARGET_FPS = 60;
-    var spriteX = 0;
-    var y = 0;
-    var txt = "Hello World";
-    var charX = 0;
-    var charY = 0;
-    var platformX = 0;
-    var platformY = GAME_HEIGHT - 50;
-    var platformW = 400;
-    var platformH = 50;
-    var charSpeedY = 0;
-    var radius = 50;
+    //character properties
+    const radius = 50;
     var scale = 1 * radius;
+    var charPositionX = 1;
+    var charPositionY = 1;
+    //directional + jump variable
+    var keyA = false;
+    var keyD = false;
+    var spaceBar = false;
+    //in-game time variables
+    var gameDeltaT = 0;
+    var elapasedT = 0;
+    var lastGameUpdate = moment().valueOf();
+    //in-game physics variables
+    const GRAVITY = 2;
+    const MAX_SPEED = 10;
+    const friction = 0.98;
+    var normalizedT;
+    var VelocityY = 0;
+    var VelocityX = 0;
+    var onGround = false;
+    //platform variables
+    var leftPlatformX = 0;
+    var leftPlatformY = 718;
+    var leftPlatformW = 400;
+    var leftPlatformH = 50;
+    var rightPlatformX = 624;
+    var rightPlatformY = 518;
+    var rightPlatformW = 400;
+    var rightPlatformH = 50;
+
+    document.addEventListener("keydown", onKeyDown, false);
+    document.addEventListener("keyup", onKeyUp, false);
 
     document.onreadystatechange = (ev) => {
       if (document.readyState == "complete") {
         initializeGame();
       }
-    };
+    }
 
     function initializeGame() {
-      ashImg = document.createElement("img");
-      ashImg.src = "Assets/ash.png";
+      createCanvas();
+      setInterval(draw, 1000 / FPS);
+      setInterval(update, 1000 / FPS);
+    }
+
+    function createCanvas() {
       gameCanvas = document.createElement("canvas");
-      gameCanvas.width = GAME_WIDTH;
-      gameCanvas.height = GAME_HEIGHT;
-      gameCanvas.style.display = "block";
-      gameCanvas.style.margin = "auto";
-      gameCanvas.style.border = "1px solid white";
-      gameCanvas.style.marginTop = "100px";
+      gameCanvas.width = DISPLAY_WIDTH;
+      gameCanvas.height = DISPLAY_HEIGHT;
       document.body.appendChild(gameCanvas);
       gameContext = gameCanvas.getContext("2d");
-      startDate = moment().valueOf();
-
-      document.onkeypress = onDocument_KeyPressed;
-
-      setInterval(draw, 1000 / TARGET_FPS);
-      setInterval(update, 1000 / TARGET_FPS);
     }
 
     function draw() {
       clearDraw();
-      drawFPS();
-      //************
+      showFPS();
       drawCharacter();
-      drawPlatform();
+      drawPlatformLeft();
+      drawPlatformRight();
     }
 
     function clearDraw() {
       gameContext.fillStyle = "cornflowerblue";
-      gameContext.fillRect(0, 0, GAME_WIDTH, GAME_HEIGHT);
+      gameContext.fillRect(0, 0, DISPLAY_WIDTH, DISPLAY_HEIGHT);
     }
 
-    function drawFPS() {
-        gameContext.font = "30px Verdana";
-        gameContext.fillStyle = "white";
-        gameContext.fillText(lastFPS, 0, 30);
+    function showFPS() {
+      gameContext.font = "30px Monospace";
+      gameContext.fillStyle = "lime";
+      gameContext.fillText(lastFPS, 992, 20);
     }
 
     function drawCharacter() {
       gameContext.strokeStyle = "white";
       gameContext.beginPath();
-      gameContext.arc(charX  + scale, charY + scale, scale, 0, 2 * Math.PI);
+      gameContext.arc(charPositionX + scale, charPositionY + scale, scale, 0, 2 * Math.PI);
       gameContext.stroke();
+      if (keyD == true) {
+        if (VelocityX < MAX_SPEED) {
+          checkPositiveBoundaryX(charPositionX);
+        }
+      }
+      if (keyA == true) {
+        if (VelocityX > -MAX_SPEED) {
+          checkNegativeBoundaryX(charPositionX);
+        }
+      }
+      if (spaceBar == true) {
+        if (onGround == true) {
+          applyJumpForce();
+        }
+      }
+      VelocityX *= friction;
+      charPositionX += VelocityX;
     }
 
-    function drawPlatform() {
-        gameContext.strokeStyle = "white";
-        gameContext.strokeRect(platformX, platformY, platformW, platformH);
+    function drawPlatformLeft() {
+      gameContext.strokeStyle = "white";
+      gameContext.strokeRect(leftPlatformX, leftPlatformY, leftPlatformW, leftPlatformH);
+    }
+
+    function drawPlatformRight() {
+      gameContext.strokeStyle = "white";
+      gameContext.strokeRect(rightPlatformX, rightPlatformY, rightPlatformW, rightPlatformH);
+    }
+
+    function onKeyDown(e) {
+      var keyCode = e.keyCode;
+      switch (keyCode) {
+        case 68:
+          keyD = true;
+          break;
+        case 65:
+          keyA = true;
+          break;
+        case 32:
+          spaceBar = true;
+          break;
+      }
+    }
+
+    function onKeyUp(e) {
+      var keyCode = e.keyCode;
+      switch (keyCode) {
+        case 68:
+          keyD = false;
+          break;
+        case 65:
+          keyA = false;
+          break;
+        case 32:
+          spaceBar = false;
+          break;
+        case 82:
+          charPositionX = 924;
+          charPositionY = 25;
+          VelocityY = 0;
+          break;
+      }
+    }
+
+    function applyJumpForce() {
+      VelocityY = -40;
+      charPositionY += friction / VelocityY;
+      onGround = false;
+    }
+
+    function checkPositiveBoundaryX(xCoordinate) {
+      if (xCoordinate < 924) {
+        return VelocityX += 0.5;
+      }
+      charPositionX = 924;
+      VelocityX = 0;
+    }
+
+    function checkNegativeBoundaryX(xCoordinate) {
+      if (xCoordinate > 0) {
+        return VelocityX -= 0.5;
+      }
+      charPositionX = 0;
+      VelocityX = 0;
     }
 
     function update() {
-      updateGameTime();
       updateFPS();
+      updateGameTime();
       updateGravity();
+    }
+
+    function updateFPS() {
+      currentFPS++;
+      var currentMoment = moment().valueOf();
+      if (currentMoment - lastFPSDate >= 1000) {
+        lastFPSDate = currentMoment;
+        lastFPS = currentFPS;
+        currentFPS = 0;
+      }
     }
 
     function updateGameTime() {
@@ -118,44 +217,38 @@
       lastGameUpdate = moment().valueOf();
     }
 
-
-    function updateFPS() {
-        currentFPS++;
-        var currentMoment = moment().valueOf();
-        if (currentMoment - lastFPSDate >= 1000) {
-          lastFPSDate = currentMoment;
-          lastFPS = currentFPS;
-          currentFPS = 0;
-        }
-    }
-
     function updateGravity() {
-      if(!isCharacterCollideWithPlatform())
-      {
-        // charSpeedY += (GRAVITY / (1000 / TARGET_FPS)) / 2;
-        var normalizedT = elapasedT / 10;
-        console.log(charSpeedY);
-        var newCharY = (charSpeedY * normalizedT * -1) - (0.5 * GRAVITY * normalizedT * normalizedT);
-        charSpeedY = ((newCharY - charY) * -1) / (gameDeltaT * 10);
-        charY = newCharY;
-      }
-      else {
-        charY = platformY - platformH - scale;
-      }
-    }
-
-    function applyJumpForce() {
-      charSpeedY = 0.9;
-    }
-
-    function onDocument_KeyPressed(e) {
-      if(e.keyCode == 32) {
-        applyJumpForce();
+      if (!isCharacterCollideWithLeftPlatform() || !isCharacterCollideWithRightPlatform()) {
+        VelocityY += GRAVITY;
+        charPositionY += friction * VelocityY;
+        onGround = false;
+        if (isCharacterCollideWithLeftPlatform()) {
+          charPositionY = leftPlatformY - leftPlatformH - scale;
+          VelocityY = 0;
+          onGround = true;
+          if (isCharacterCollideWithRightPlatform()) {
+            charPositionY = rightPlatformY - rightPlatformH - scale;
+            VelocityY = 0;
+            onGround = true;
+          }
+        }
       }
     }
 
-    function isCharacterCollideWithPlatform() {
-      return charY + scale >= platformY - platformH;
+    function isCharacterCollideWithLeftPlatform() {
+      if (charPositionY < DISPLAY_HEIGHT && charPositionX < leftPlatformW && charPositionY < leftPlatformY - leftPlatformH) {
+        if (charPositionX + scale < leftPlatformW && charPositionY + scale < leftPlatformY) {
+          return charPositionY + scale >= leftPlatformY - leftPlatformH;
+        }
+      }
+    }
+
+    function isCharacterCollideWithRightPlatform() {
+      if (charPositionY < DISPLAY_HEIGHT && charPositionX < rightPlatformW && charPositionY < rightPlatformY - rightPlatformH) {
+        if (charPositionX + scale < rightPlatformW && charPositionY + scale < rightPlatformY) {
+          return charPositionY + scale >= rightPlatformY - rightPlatformH;
+        }
+      }
     }
 
   </script>
